force-app/main/default/objects/Configuration__c/Configuration__c.object-meta.xml
<CustomObject>
    <label>Configuration</label>
    <nameField>
        <label>Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>