force-app/main/default/objects/Configuration__c/fields/DependantFieldName__c.field-meta.xml
<CustomField>
    <fullName>DependantFieldName__c</fullName>
    <label>DependantFieldName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>